Bug 442815 - Open KFind symbol cannot be changed
Summary: Open KFind symbol cannot be changed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-22 18:23 UTC by Matthias
Modified: 2021-09-22 21:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias 2021-09-22 18:23:19 UTC
SUMMARY

The icon of 'Open KFind' cannot be changed permanently. 


STEPS TO REPRODUCE
1. Put the KFind action into the toolbar
2. Change its icon
3. Close Dolphin and reopen it

OBSERVED RESULT

Old logo

EXPECTED RESULT

Chosen alternative is shown

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

I am using KaOS. This is not selectable in the drop down menu
Comment 1 Bug Janitor Service 2021-09-22 18:53:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/276
Comment 2 Nicolas Fella 2021-09-22 21:24:46 UTC
Git commit d3f427a6da1b117c85b1080bf198ae4758d00e8e by Nicolas Fella.
Committed on 22/09/2021 at 21:23.
Pushed by nicolasfella into branch 'master'.

Don't force icon for preferred search tool action if one is manually configured

The code reads the icon from the relevant application and uses that for the action

When the user has configured one manually in the toolbar settings that is overridden

To avoid this only change the icon if it is the default one (search)

M  +5    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/commit/d3f427a6da1b117c85b1080bf198ae4758d00e8e
Comment 3 Nicolas Fella 2021-09-22 21:26:44 UTC
Git commit 8bf64cf8b15f390ab9a76f304dc22438b258556f by Nicolas Fella.
Committed on 22/09/2021 at 21:25.
Pushed by nicolasfella into branch 'release/21.08'.

Don't force icon for preferred search tool action if one is manually configured

The code reads the icon from the relevant application and uses that for the action

When the user has configured one manually in the toolbar settings that is overridden

To avoid this only change the icon if it is the default one (search)
(cherry picked from commit d3f427a6da1b117c85b1080bf198ae4758d00e8e)

M  +5    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/commit/8bf64cf8b15f390ab9a76f304dc22438b258556f