Don't force icon for preferred search tool action if one is manually configured

The code reads the icon from the relevant application and uses that for the action

When the user has configured one manually in the toolbar settings that is overridden

To avoid this only change the icon if it is the default one (search)

BUG: 442815